# forcetester

./: CMakeLists.txt  README.md  forcetester.ioc
Inc/: FreeRTOSConfig.h  ads1232.h  main.h  stm32f1xx_it.h  usbd_conf.h
Src/: ads1232.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
